fix mobile navbar width cutoff

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -328,7 +328,8 @@ header {
     padding: 20px; }
   .navbar a {
     padding: 10px 10px;
-    margin: 0 3px; }
+    margin: 0 3px;
+    font-size: 1rem; }
   .flex-items {
     flex-direction: column; }
   .flex-items > div {
